src/paths/snapshots/mandala__paths__path__path_tests__f64-3d-polygon-16.snap
---
source: src/paths/path.rs
expression: samples
---
[
    Vector3 {
        x: 43.30127018922194,
        y: 24.999999999999996,
        z: 0.0,
    },
    Vector3 {
        x: 30.438071450436038,
        y: 39.66766701456175,
        z: 0.0,
    },
    Vector3 {
        x: 12.940952255126048,
        y: 48.29629131445341,
        z: 0.0,
    },
    Vector3 {
        x: -6.526309611002569,
        y: 49.572243068690526,
        z: 0.0,
    },
    Vector3 {
        x: -24.99999999999999,
        y: 43.30127018922194,
        z: 0.0,
    },
    Vector3 {
        x: -39.667667014561744,
        y: 30.438071450436045,
        z: 0.0,
    },
    Vector3 {
        x: -48.29629131445341,
        y: 12.940952255126051,
        z: 0.0,
    },
    Vector3 {
        x: -49.572243068690526,
        y: -6.526309611002566,
        z: 0.0,
    },
    Vector3 {
        x: -43.30127018922194,
        y: -24.99999999999999,
        z: 0.0,
    },
    Vector3 {
        x: -30.438071450436045,
        y: -39.667667014561744,
        z: 0.0,
    },
    Vector3 {
        x: -12.940952255126032,
        y: -48.29629131445341,
        z: 0.0,
    },
    Vector3 {
        x: 6.526309611002606,
        y: -49.57224306869052,
        z: 0.0,
    },
    Vector3 {
        x: 25.00000000000004,
        y: -43.30127018922191,
        z: 0.0,
    },
    Vector3 {
        x: 39.6676670145618,
        y: -30.438071450435977,
        z: 0.0,
    },
    Vector3 {
        x: 48.29629131445344,
        y: -12.940952255125948,
        z: 0.0,
    },
    Vector3 {
        x: 49.572243068690504,
        y: 6.526309611002704,
        z: 0.0,
    },
    Vector3 {
        x: 43.30127018922194,
        y: 24.999999999999996,
        z: 0.0,
    },
]
