src/paths/snapshots/mandala__paths__path__path_tests__f64-3d-polygon-17.snap
---
source: src/paths/path.rs
expression: samples
---
[
    Vector3 {
        x: 43.30127018922194,
        y: 24.999999999999996,
        z: 0.0,
    },
    Vector3 {
        x: 31.346190294705327,
        y: 38.95402872628352,
        z: 0.0,
    },
    Vector3 {
        x: 15.157633705652177,
        y: 47.64710002135782,
        z: 0.0,
    },
    Vector3 {
        x: -3.078045306697141,
        y: 49.905166436852205,
        z: 0.0,
    },
    Vector3 {
        x: -20.898017244339172,
        y: 45.423263590976184,
        z: 0.0,
    },
    Vector3 {
        x: -35.895596153222094,
        y: 34.80669729814633,
        z: 0.0,
    },
    Vector3 {
        x: -46.04527589724767,
        y: 19.489293664633983,
        z: 0.0,
    },
    Vector3 {
        x: -49.9762859856683,
        y: 1.5397529278085416,
        z: 0.0,
    },
    Vector3 {
        x: -47.15772172356388,
        y: -16.617739973982953,
        z: 0.0,
    },
    Vector3 {
        x: -37.97024583273539,
        y: -32.53091501021208,
        z: 0.0,
    },
    Vector3 {
        x: -23.654677841800527,
        y: -44.050609714289216,
        z: 0.0,
    },
    Vector3 {
        x: -6.144414533235742,
        y: -49.62102548359678,
        z: 0.0,
    },
    Vector3 {
        x: 12.195686005418814,
        y: -48.48984680175049,
        z: 0.0,
    },
    Vector3 {
        x: 28.88869157041251,
        y: -40.80984561781112,
        z: 0.0,
    },
    Vector3 {
        x: 41.68011926105594,
        y: -27.61824864802534,
        z: 0.0,
    },
    Vector3 {
        x: 48.842415887980025,
        y: -10.696654160324941,
        z: 0.0,
    },
    Vector3 {
        x: 49.40827360406298,
        y: 7.669582743934203,
        z: 0.0,
    },
    Vector3 {
        x: 43.30127018922194,
        y: 24.999999999999996,
        z: 0.0,
    },
]
