src/paths/snapshots/mandala__paths__path__path_tests__f64-3d-polygon-18.snap
---
source: src/paths/path.rs
expression: samples
---
[
    Vector3 {
        x: 43.30127018922194,
        y: 24.999999999999996,
        z: 0.0,
    },
    Vector3 {
        x: 32.13938048432697,
        y: 38.3022221559489,
        z: 0.0,
    },
    Vector3 {
        x: 17.10100716628344,
        y: 46.984631039295415,
        z: 0.0,
    },
    Vector3 {
        x: 3.061616997868383e-15,
        y: 50.0,
        z: 0.0,
    },
    Vector3 {
        x: -17.101007166283434,
        y: 46.98463103929542,
        z: 0.0,
    },
    Vector3 {
        x: -32.13938048432696,
        y: 38.302222155948904,
        z: 0.0,
    },
    Vector3 {
        x: -43.30127018922194,
        y: 24.999999999999996,
        z: 0.0,
    },
    Vector3 {
        x: -49.24038765061041,
        y: 8.682408883346513,
        z: 0.0,
    },
    Vector3 {
        x: -49.2403876506104,
        y: -8.682408883346524,
        z: 0.0,
    },
    Vector3 {
        x: -43.30127018922193,
        y: -25.000000000000007,
        z: 0.0,
    },
    Vector3 {
        x: -32.13938048432698,
        y: -38.3022221559489,
        z: 0.0,
    },
    Vector3 {
        x: -17.101007166283466,
        y: -46.98463103929541,
        z: 0.0,
    },
    Vector3 {
        x: -5.359377197861141e-14,
        y: -50.0,
        z: 0.0,
    },
    Vector3 {
        x: 17.10100716628337,
        y: -46.984631039295444,
        z: 0.0,
    },
    Vector3 {
        x: 32.13938048432689,
        y: -38.30222215594896,
        z: 0.0,
    },
    Vector3 {
        x: 43.301270189221874,
        y: -25.0000000000001,
        z: 0.0,
    },
    Vector3 {
        x: 49.24038765061038,
        y: -8.682408883346652,
        z: 0.0,
    },
    Vector3 {
        x: 49.24038765061043,
        y: 8.682408883346376,
        z: 0.0,
    },
    Vector3 {
        x: 43.30127018922194,
        y: 24.999999999999996,
        z: 0.0,
    },
]
