src/paths/snapshots/mandala__paths__path__path_tests__f64-3d-polygon-19.snap
---
source: src/paths/path.rs
expression: samples
---
[
    Vector3 {
        x: 43.30127018922194,
        y: 24.999999999999996,
        z: 0.0,
    },
    Vector3 {
        x: 32.83760120238673,
        y: 37.70533048884481,
        z: 0.0,
    },
    Vector3 {
        x: 18.815468597391778,
        y: 46.32470336074009,
        z: 0.0,
    },
    Vector3 {
        x: 2.7543880177932754,
        y: 49.92407582166581,
        z: 0.0,
    },
    Vector3 {
        x: -13.60517324226675,
        y: 48.113400015462524,
        z: 0.0,
    },
    Vector3 {
        x: -28.490402875513304,
        y: 41.088890761262256,
        z: 0.0,
    },
    Vector3 {
        x: -40.288255283048905,
        y: 29.611762633249,
        z: 0.0,
    },
    Vector3 {
        x: -47.72025009397537,
        y: 14.925740550084724,
        z: 0.0,
    },
    Vector3 {
        x: -49.98101535124757,
        y: -1.377717118408105,
        z: 0.0,
    },
    Vector3 {
        x: -46.825562059852736,
        y: -17.531877759637727,
        z: 0.0,
    },
    Vector3 {
        x: -38.59583254581604,
        y: -31.786187410498407,
        z: 0.0,
    },
    Vector3 {
        x: -26.183645699393903,
        y: -42.59597044191635,
        z: 0.0,
    },
    Vector3 {
        x: -10.9340545603188,
        y: -48.78981913137178,
        z: 0.0,
    },
    Vector3 {
        x: 5.500411049703956,
        y: -49.69653386589747,
        z: 0.0,
    },
    Vector3 {
        x: 21.338821774820175,
        y: -45.21785803487888,
        z: 0.0,
    },
    Vector3 {
        x: 34.86484005469976,
        y: -35.83912565842257,
        z: 0.0,
    },
    Vector3 {
        x: 44.6127119309197,
        y: -22.57666791554447,
        z: 0.0,
    },
    Vector3 {
        x: 49.52610423187516,
        y: -6.867677890920411,
        z: 0.0,
    },
    Vector3 {
        x: 49.072574662620895,
        y: 9.585531596186932,
        z: 0.0,
    },
    Vector3 {
        x: 43.30127018922194,
        y: 24.999999999999996,
        z: 0.0,
    },
]
