src/paths/snapshots/mandala__paths__path__path_tests__f64-3d-polygon-20.snap
---
source: src/paths/path.rs
expression: samples
---
[
    Vector3 {
        x: 43.30127018922194,
        y: 24.999999999999996,
        z: 0.0,
    },
    Vector3 {
        x: 33.45653031794292,
        y: 37.15724127386971,
        z: 0.0,
    },
    Vector3 {
        x: 20.33683215379002,
        y: 45.67727288213004,
        z: 0.0,
    },
    Vector3 {
        x: 5.226423163382683,
        y: 49.72609476841367,
        z: 0.0,
    },
    Vector3 {
        x: -10.395584540887956,
        y: 48.907380036690284,
        z: 0.0,
    },
    Vector3 {
        x: -24.99999999999999,
        y: 43.30127018922194,
        z: 0.0,
    },
    Vector3 {
        x: -37.1572412738697,
        y: 33.45653031794292,
        z: 0.0,
    },
    Vector3 {
        x: -45.67727288213004,
        y: 20.33683215379002,
        z: 0.0,
    },
    Vector3 {
        x: -49.72609476841367,
        y: 5.2264231633826865,
        z: 0.0,
    },
    Vector3 {
        x: -48.907380036690284,
        y: -10.395584540887953,
        z: 0.0,
    },
    Vector3 {
        x: -43.30127018922194,
        y: -24.99999999999999,
        z: 0.0,
    },
    Vector3 {
        x: -33.45653031794292,
        y: -37.1572412738697,
        z: 0.0,
    },
    Vector3 {
        x: -20.336832153790045,
        y: -45.67727288213003,
        z: 0.0,
    },
    Vector3 {
        x: -5.226423163382711,
        y: -49.72609476841367,
        z: 0.0,
    },
    Vector3 {
        x: 10.395584540887928,
        y: -48.90738003669029,
        z: 0.0,
    },
    Vector3 {
        x: 24.999999999999964,
        y: -43.30127018922195,
        z: 0.0,
    },
    Vector3 {
        x: 37.15724127386969,
        y: -33.45653031794294,
        z: 0.0,
    },
    Vector3 {
        x: 45.677272882130026,
        y: -20.336832153790045,
        z: 0.0,
    },
    Vector3 {
        x: 49.72609476841367,
        y: -5.226423163382715,
        z: 0.0,
    },
    Vector3 {
        x: 48.90738003669029,
        y: 10.395584540887938,
        z: 0.0,
    },
    Vector3 {
        x: 43.30127018922194,
        y: 24.999999999999996,
        z: 0.0,
    },
]
