src/paths/snapshots/mandala__paths__path__path_tests__f64-3d-polygon-3.snap
---
source: src/paths/path.rs
expression: samples
---
[
    Vector3 {
        x: 43.30127018922194,
        y: 24.999999999999996,
        z: 0.0,
    },
    Vector3 {
        x: -43.301270189221924,
        y: 25.000000000000018,
        z: 0.0,
    },
    Vector3 {
        x: -9.184850993605149e-15,
        y: -50.0,
        z: 0.0,
    },
    Vector3 {
        x: 43.30127018922194,
        y: 24.999999999999996,
        z: 0.0,
    },
]
