src/paths/snapshots/mandala__paths__path__path_tests__f64-3d-polygon-4.snap
---
source: src/paths/path.rs
expression: samples
---
[
    Vector3 {
        x: 43.30127018922194,
        y: 24.999999999999996,
        z: 0.0,
    },
    Vector3 {
        x: -24.99999999999999,
        y: 43.30127018922194,
        z: 0.0,
    },
    Vector3 {
        x: -43.30127018922194,
        y: -24.99999999999999,
        z: 0.0,
    },
    Vector3 {
        x: 24.999999999999964,
        y: -43.30127018922195,
        z: 0.0,
    },
    Vector3 {
        x: 43.30127018922194,
        y: 24.999999999999996,
        z: 0.0,
    },
]
