src/paths/snapshots/mandala__paths__path__path_tests__f64-3d-polygon-5.snap
---
source: src/paths/path.rs
expression: samples
---
[
    Vector3 {
        x: 43.30127018922194,
        y: 24.999999999999996,
        z: 0.0,
    },
    Vector3 {
        x: -10.395584540887956,
        y: 48.907380036690284,
        z: 0.0,
    },
    Vector3 {
        x: -49.72609476841367,
        y: 5.2264231633826865,
        z: 0.0,
    },
    Vector3 {
        x: -20.336832153790045,
        y: -45.67727288213003,
        z: 0.0,
    },
    Vector3 {
        x: 37.15724127386969,
        y: -33.45653031794294,
        z: 0.0,
    },
    Vector3 {
        x: 43.30127018922194,
        y: 24.999999999999996,
        z: 0.0,
    },
]
