src/paths/snapshots/mandala__paths__path__path_tests__f64-3d-polygon-7.snap
---
source: src/paths/path.rs
expression: samples
---
[
    Vector3 {
        x: 43.30127018922194,
        y: 24.999999999999996,
        z: 0.0,
    },
    Vector3 {
        x: 7.452113308808732,
        y: 49.44154131125643,
        z: 0.0,
    },
    Vector3 {
        x: -34.008636888545965,
        y: 36.652593591491325,
        z: 0.0,
    },
    Vector3 {
        x: -49.860189859059005,
        y: -3.736504679321199,
        z: 0.0,
    },
    Vector3 {
        x: -28.166002903181138,
        y: -41.31193871579973,
        z: 0.0,
    },
    Vector3 {
        x: 14.737758720545175,
        y: -47.77864028930705,
        z: 0.0,
    },
    Vector3 {
        x: 46.5436874322102,
        y: -18.26705121831979,
        z: 0.0,
    },
    Vector3 {
        x: 43.30127018922194,
        y: 24.999999999999996,
        z: 0.0,
    },
]
