src/paths/snapshots/mandala__paths__path__path_tests__f64-3d-polygon-8.snap
---
source: src/paths/path.rs
expression: samples
---
[
    Vector3 {
        x: 43.30127018922194,
        y: 24.999999999999996,
        z: 0.0,
    },
    Vector3 {
        x: 12.940952255126048,
        y: 48.29629131445341,
        z: 0.0,
    },
    Vector3 {
        x: -24.99999999999999,
        y: 43.30127018922194,
        z: 0.0,
    },
    Vector3 {
        x: -48.29629131445341,
        y: 12.940952255126051,
        z: 0.0,
    },
    Vector3 {
        x: -43.30127018922194,
        y: -24.99999999999999,
        z: 0.0,
    },
    Vector3 {
        x: -12.940952255126032,
        y: -48.29629131445341,
        z: 0.0,
    },
    Vector3 {
        x: 25.0,
        y: -43.30127018922193,
        z: 0.0,
    },
    Vector3 {
        x: 48.29629131445341,
        y: -12.940952255126033,
        z: 0.0,
    },
    Vector3 {
        x: 43.30127018922194,
        y: 24.999999999999996,
        z: 0.0,
    },
]
