src/paths/snapshots/mandala__paths__path__path_tests__f64-3d-polygon-9.snap
---
source: src/paths/path.rs
expression: samples
---
[
    Vector3 {
        x: 43.30127018922194,
        y: 24.999999999999996,
        z: 0.0,
    },
    Vector3 {
        x: 17.10100716628344,
        y: 46.984631039295415,
        z: 0.0,
    },
    Vector3 {
        x: -17.101007166283434,
        y: 46.98463103929542,
        z: 0.0,
    },
    Vector3 {
        x: -43.30127018922194,
        y: 24.999999999999996,
        z: 0.0,
    },
    Vector3 {
        x: -49.2403876506104,
        y: -8.682408883346524,
        z: 0.0,
    },
    Vector3 {
        x: -32.13938048432698,
        y: -38.3022221559489,
        z: 0.0,
    },
    Vector3 {
        x: -9.184850993605149e-15,
        y: -50.0,
        z: 0.0,
    },
    Vector3 {
        x: 32.13938048432696,
        y: -38.302222155948904,
        z: 0.0,
    },
    Vector3 {
        x: 49.2403876506104,
        y: -8.68240888334652,
        z: 0.0,
    },
    Vector3 {
        x: 43.30127018922194,
        y: 24.999999999999996,
        z: 0.0,
    },
]
